2006-12-30  Danny Backx <dannybackx@users.sourceforge.net>

	* build-mingw32ce.sh, build-cegcc.sh (build_profile) : Change the
	approach to deal with -DNO_UNDERSCORES so we keep CFLAGS free for use
	by the command line.

2006-12-24  Danny Backx <dannybackx@users.sourceforge.net>

	* build-mingw32ce.sh, build-cegcc.sh (build_profile) : Add.
	* build-mingw32ce.sh, build-cegcc.sh (build_gcc) : Add --with-headers
	option so -Dinhibit_libc isn't triggered.

2006-12-19  Pedro Alves  <pedro_alves@portugalmail.pt>

	* build-mingw32ce.sh (build-w32api): New function.
        Add w32api command line options that calls build-w32api.

2006-12-18  Danny Backx <dannybackx@users.sourceforge.net>

	* build-mingw32ce.sh, build-cegcc.sh (build_docs) : Add.

2006-11-18  Danny Backx <dannybackx@users.sourceforge.net>

	* build-mingw32ce.sh, build-cegcc.sh (build_gcc) : Work around
	gcc build system bug.

2006-10-27  Pedro Alves  <pedro_alves@portugalmail.pt>

	* build-mingw32ce.sh : Remove duplicated build_all function.
	(copy_headers) : Add error handlers.
	* build-cegcc.sh (copy_w32api_headers) : Add missing ${BASE_DIRECTORY}.
	Add error handler.

2006-10-12  Pedro Alves  <pedro_alves@portugalmail.pt>

	* build-mingw32ce.sh : Make ${BUILD_DIR} absolute in default case.
	* build-cegcc.sh : Likewise.
	(build_gcc) : Switch to pushd/popd.

2006-10-10  Danny Backx <dannybackx@users.sourceforge.net>

	* w32api-3.7 : Remove. It is still possible to recover
	it from SVN by using the svn versioning mechanisms,
	e.g. by referring to version 708.

2006-10-10  Pedro Alves  <pedro_alves@portugalmail.pt>

        * build-cegcc.sh : Fix w32api build option.
	(build_gcc) : Pass --without-newlib, so when we have a combined
	tree, newlib isn't built twice.
	
2006-10-10  Pedro Alves  <pedro_alves@portugalmail.pt>

        * build-cegcc.sh : Fix cegccthrd build option.
	(build_dummy_cegccdll) : Call cegcc/fakecegccdll/install.sh.
	This change, along with the previous commits,