@@ -1,3 +1,9 @@
+2006-12-31  Danny Backx <dannybackx@users.sourceforge.net>
+
+	* build-mingw32ce.sh, build-cegcc.sh (build_profile) : Copy the
+	options from the mingw_runtime build, so src/profile/Makefile.in gets
+	the right parameters and install stuff in the right place.
+
 2006-12-30  Danny Backx <dannybackx@users.sourceforge.net>
 
 	* build-mingw32ce.sh, build-cegcc.sh (build_profile) : Change the
